<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layoutDescription="@xml/go_up_anim">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/main_title"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/et_search"
        android:text="@string/main_description"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_edge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_edge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/left_edge"
        app:layout_constraintRight_toLeftOf="@id/right_edge"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintBottom_toBottomOf="parent"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionSearch"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        app:backgroundTint="#000000"
        android:textColorHint="#000000"
        android:hint="@string/main_hint"/>

    <TextView
        android:id="@+id/tv_switch_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/main_switch_label"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/accent_switch"
        app:layout_constraintBottom_toBottomOf="@id/accent_switch"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/accent_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toRightOf="@id/tv_switch_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="@id/rv_result"
        app:layout_constraintRight_toRightOf="@id/rv_result"
        app:layout_constraintTop_toTopOf="@id/rv_result"/>

    <TextView
        android:id="@+id/empty_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/rv_result"
        app:layout_constraintRight_toRightOf="@id/rv_result"
        app:layout_constraintTop_toTopOf="@id/rv_result"
        android:layout_marginTop="50dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="gone"
        android:text="@string/main_empty_str"/>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/v_dismiss"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/left_edge"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/baseline_keyboard_arrow_left_black_48"
        android:visibility="gone" />
<!--  android:rotation="-90"  -->

</androidx.constraintlayout.motion.widget.MotionLayout>